# Loki

./: CMakeLists.txt  README  TODO  loki  main.cpp  makefile
Loki/: CMakeLists.txt  main.cpp
Loki/GLSL/: CMakeLists.txt
Loki/GLSL/Lexer/: Lexer.cpp  Lexer.hpp  Token.cpp  Token.hpp
Loki/GLSL/Lib/: String.cpp
Loki/GLSL/Parser/: AST.cpp  AST.hpp  BaseType.cpp  BaseType.hpp  Block.cpp  Block.hpp  Buffer.cpp  Buffer.hpp  BuiltInTypes.cpp  BuiltInTypes.hpp  Declarations.cpp  Declarations.hpp  Expression.hpp  Expressions.cpp  Expressions.hpp  FlowControl.cpp  FlowControl.hpp  FunctionCall.cpp  FunctionCall.hpp  Functions.cpp  Functions.hpp  InterpolationModifier.cpp  InterpolationModifier.hpp  LayoutQualifier.cpp  LayoutQualifier.hpp  Literals.cpp  Literals.hpp  Parser.cpp  Parser.hpp  PrecisionQualifier.cpp  PrecisionQualifiers.hpp  Scope.cpp  Scope.hpp  Statement.cpp  Statement.hpp  StorageQualifiers.cpp  StorageQualifiers.hpp  Structs.cpp  Structs.hpp  Types.cpp  (+3 more)
Loki/HLSL/: CMakeLists.txt
Loki/HLSL/Lexer/: Lexer.cpp  Lexer.hpp  Token.cpp  Token.hpp
Loki/HLSL/Lib/: String.hpp
Loki/HLSL/Parser/: AST.cpp  AST.hpp  BaseType.cpp  BaseType.hpp  Block.cpp  Block.hpp  Buffer.cpp  Buffer.hpp  BuildInFunctions.cpp  BuildInFunctions.hpp  BuiltInTypes.cpp  BuiltInTypes.hpp  Declarations.cpp  Declarations.hpp  Evaluation.cpp  Evaluation.hpp  Expression.cpp  Expressions.cpp  Expressions.hpp  FlowControl.cpp  FlowControl.hpp  Function.cpp  FunctionCall.cpp  FunctionCall.hpp  Functions.cpp  Functions.hpp  InterpolationModifier.cpp  InterpolationModifier.hpp  IntrisicFunctions.hpp  Literals.cpp  Literals.hpp  PackOffset.cpp  PackOffset.hpp  Parser.cpp  Parser.hpp  Profiles.cpp  Profiles.hpp  Register.cpp  Register.hpp  Scope.cpp  (+13 more)
Loki/Lib/: String.hpp
Tests/: Buffer.hlsl  Functions.hlsl  VariableDeclaration.hlsl
codes/: blocks.loki  do_while.loki  example.loki  expressions.loki  for.loki  functions.loki  if.loki  struct.loki  switch.loki  teste.loki  variable_declarations.loki  vertex_fragment.loki  (+1 more)
(+66 files in other folders)
